[gd_scene load_steps=11 format=2]

[ext_resource path="res://sprites/Button sprites/button.png" type="Texture" id=1]
[ext_resource path="res://MC_Health.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/Button sprites/attackbtn.png" type="Texture" id=3]
[ext_resource path="res://sprites/Button sprites/attackbtn_pressed.png" type="Texture" id=4]
[ext_resource path="res://sprites/Button sprites/button pressed.png" type="Texture" id=5]
[ext_resource path="res://GUI.gd" type="Script" id=6]
[ext_resource path="res://MenuTutorial2.gd" type="Script" id=7]
[ext_resource path="res://MenuPopUp.gd" type="Script" id=8]
[ext_resource path="res://sprites/Button sprites/Restart button pressed.png" type="Texture" id=9]
[ext_resource path="res://sprites/Button sprites/Restart button.png" type="Texture" id=10]

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 6 )

[node name="Control3" type="Control" parent="."]
margin_top = 1.0
margin_right = 1024.0
margin_bottom = 597.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attack" type="TouchScreenButton" parent="Control3"]
position = Vector2( 868.753, 435.962 )
scale = Vector2( 0.392, 0.424 )
normal = ExtResource( 3 )
pressed = ExtResource( 4 )
action = "Serang"
visibility_mode = 1

[node name="Jump" type="TouchScreenButton" parent="Control3"]
position = Vector2( 730.45, 454.962 )
scale = Vector2( 0.392, 0.424 )
normal = ExtResource( 1 )
pressed = ExtResource( 5 )
action = "Lompat"
visibility_mode = 1

[node name="Left" type="TouchScreenButton" parent="Control3"]
position = Vector2( 16.9707, 581.242 )
rotation = -1.5708
scale = Vector2( 0.392, 0.423551 )
normal = ExtResource( 1 )
pressed = ExtResource( 5 )
action = "Mundur"
visibility_mode = 1

[node name="Right" type="TouchScreenButton" parent="Control3"]
position = Vector2( 316.784, 451.134 )
rotation = 1.5708
scale = Vector2( 0.392, 0.437062 )
normal = ExtResource( 1 )
pressed = ExtResource( 5 )
action = "Maju"
visibility_mode = 1

[node name="MC_Health" parent="Control3" instance=ExtResource( 2 )]
margin_left = 888.58
margin_top = 4.7637
margin_right = 1158.58
margin_bottom = 274.764
rect_scale = Vector2( 0.43, 0.43 )

[node name="Label" type="Label" parent="Control3"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 888.371
margin_top = 48.6835
margin_right = 986.371
margin_bottom = 83.6835
rect_scale = Vector2( 1.25, 1.25 )
rect_pivot_offset = Vector2( -2.59802, 34.4241 )
text = "200/200"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuTutorial" type="Popup" parent="."]
pause_mode = 2
visible = true
margin_right = 1024.0
margin_bottom = 600.0
popup_exclusive = true
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MenuTutorial"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.294118 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="ColorRect" parent="MenuTutorial"]
margin_left = 448.0
margin_top = 185.0
margin_right = 568.0
margin_bottom = 229.0
color = Color( 0.431373, 0.431373, 0.431373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MenuTutorial/Resume"]
margin_left = 32.128
margin_top = 13.8591
margin_right = 83.128
margin_bottom = 27.8591
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "RESUME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="ColorRect" parent="MenuTutorial"]
margin_left = 448.0
margin_top = 265.0
margin_right = 568.0
margin_bottom = 309.0
color = Color( 0.431373, 0.431373, 0.431373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MenuTutorial/Restart"]
margin_left = 28.9782
margin_top = 13.8591
margin_right = 81.9782
margin_bottom = 27.8591
text = "RESTART"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="ColorRect" parent="MenuTutorial"]
margin_left = 448.0
margin_top = 345.0
margin_right = 568.0
margin_bottom = 389.0
color = Color( 0.431373, 0.431373, 0.431373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MenuTutorial/Quit"]
margin_left = 36.5377
margin_top = 13.8591
margin_right = 76.5377
margin_bottom = 27.8591
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game_over" type="Popup" parent="."]
pause_mode = 2
visible = true
margin_right = 1024.0
margin_bottom = 600.0
popup_exclusive = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Game_over"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Label" parent="Game_over"]
margin_left = 273.326
margin_top = 166.112
margin_right = 350.326
margin_bottom = 180.112
rect_scale = Vector2( 6, 6 )
text = "GAME OVER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Game_over"]
margin_left = 100.786
margin_top = 298.765
margin_right = 311.786
margin_bottom = 313.765
rect_scale = Vector2( 4, 4 )
text = "How did you even fail in tutorial?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Game_over"]
wait_time = 2.0
one_shot = true

[node name="TouchScreenButton" type="TouchScreenButton" parent="Game_over"]
position = Vector2( 447.506, 398.318 )
scale = Vector2( 2, 2 )
normal = ExtResource( 10 )
pressed = ExtResource( 9 )
action = "Restart"
