[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/Button sprites/button.png" type="Texture" id=1]
[ext_resource path="res://hearts/heart.png" type="Texture" id=2]
[ext_resource path="res://hearts/halfheart.png" type="Texture" id=3]
[ext_resource path="res://hearts/emptyheart.png" type="Texture" id=4]
[ext_resource path="res://sprites/Button sprites/button pressed.png" type="Texture" id=5]
[ext_resource path="res://GUI.gd" type="Script" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 6 )

[node name="Control3" type="Control" parent="."]
margin_right = 1019.0
margin_bottom = 596.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jump" type="TouchScreenButton" parent="Control3"]
position = Vector2( 870.45, 456.962 )
scale = Vector2( 0.392099, 0.391978 )
normal = ExtResource( 1 )
pressed = ExtResource( 5 )
action = "Lompat"

[node name="Left" type="TouchScreenButton" parent="Control3"]
position = Vector2( 16.9707, 581.242 )
rotation = -1.5708
scale = Vector2( 0.392, 0.423551 )
normal = ExtResource( 1 )
pressed = ExtResource( 5 )
action = "Mundur"

[node name="Right" type="TouchScreenButton" parent="Control3"]
position = Vector2( 316.784, 451.134 )
rotation = 1.5708
scale = Vector2( 0.392, 0.437062 )
normal = ExtResource( 1 )
pressed = ExtResource( 5 )
action = "Maju"

[node name="Health_1" type="AnimatedSprite" parent="Control3"]
position = Vector2( 991.5, 29 )
scale = Vector2( 0.162362, 0.148148 )
frames = SubResource( 1 )
frame = 2

[node name="Health_2" type="AnimatedSprite" parent="Control3"]
position = Vector2( 941.5, 29 )
scale = Vector2( 0.159259, 0.155556 )
frames = SubResource( 2 )
frame = 2

[node name="Health_3" type="AnimatedSprite" parent="Control3"]
position = Vector2( 894.5, 30 )
scale = Vector2( 0.159259, 0.155556 )
frames = SubResource( 2 )
frame = 2
